# fastapi-another-jwt-auth

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-docs.yml  tests.yml
advanced-usage/additional-claims/: index.html
advanced-usage/asymmetric/: index.html
advanced-usage/bigger-app/: index.html
advanced-usage/dynamic-algorithm/: index.html
advanced-usage/dynamic-expires/: index.html
advanced-usage/generate-docs/: index.html
advanced-usage/websocket/: index.html
api-doc/: index.html
configuration/cookies/: index.html
configuration/csrf/: index.html
configuration/denylist/: index.html
configuration/general/: index.html
configuration/headers/: index.html
contributing/: index.html
docs/: contributing.md
docs/advanced-usage/: bigger-app.md  generate-docs.md
examples/: additional_claims.py  asymmetric.py  basic.py  csrf_protection_cookies.py  denylist.py  denylist_redis.py  dynamic_algorithm.py  freshness.py  generate_doc.py  jwt_in_cookies.py  optional.py  refresh.py  websocket.py  websocket_cookie.py
examples/multiple_files/: app.py
examples/multiple_files/routers/: items.py  users.py
fastapi_another_jwt_auth/: __init__.py  auth_config.py  auth_jwt.py  config.py  exceptions.py
fastapi_jwt_auth/: auth_jwt.py
release-notes/: index.html
search/: search_index.json
tests/: conftest.py  test_config.py  test_cookies.py  test_create_token.py  test_decode_token.py  test_denylist.py  test_headers.py  test_token_multiple_locations.py  test_url_protected.py  test_websocket.py
usage/basic/: index.html
usage/freshness/: index.html
usage/jwt-in-cookies/: index.html
usage/optional/: index.html
usage/refresh/: index.html
usage/revoking/: index.html
